# study_timer

./: .gitignore  Cargo.toml  LICENSE
src/: cli.rs  config.rs  main.rs  notification.rs  schedule.rs  scheduler.rs
