[package]
name = "study_timer"
version = "0.1.0"
edition = "2024"
author = "ziggybaz"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
notify-rust = "4.9"
tokio = { version = "1", features = ["full"] }
colored = "2.0"
directories = "5.0"

[dev-dependencies]
tempfile = "3.5"
mockall = "0.11"
